2008-05-26  Andreas Schwab  <schwab@suse.de>

	* vc.el (vc-default-prettify-state-info): Fix formatting of an
	unknown state.

	* tar-mode.el (tar-summarize-buffer): Comment fix.

2008-05-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* tar-mode.el (tar-summarize-buffer): Handle GNU Tar @LongLink format.

2008-05-26  Glenn Morris  <rgm@gnu.org>

	* calendar/cal-hebrew.el (diary-ordinal-suffix): Declare for compiler.

2008-05-25  John Paul Wallington  <jpw@pobox.com>

	* proced.el (proced-next-line, proced-previous-line): Avoid
	calling `next-line' and `previous-line' from Lisp code.

2008-05-25  Ed Reingold  <reingold@emr.cs.iit.edu>

	* calendar/cal-hebrew.el (diary-hebrew-yahrzeit):
	Use diary-ordinal-suffix.

2008-05-24  Juanma Barranquero  <lekktu@gmail.com>

	* emacs-lisp/edebug.el (edebug-setup-hook, edebug-all-defs)
	(edebug-all-forms, edebug-eval-macro-args, edebug-save-windows)
	(edebug-save-displayed-buffer-points, edebug-initial-mode)
	(edebug-trace, edebug-test-coverage, edebug-continue-kbd-macro)
	(edebug-print-length, edebug-print-level, edebug-print-circle)
	(edebug-unwrap-results, edebug-on-error, edebug-on-quit)
	(edebug-global-break-condition, edebug-sit-for-seconds):
	Remove spurious * from defcustom docstrings.
	(edebug-unwrap*, edebug-signal, edebug-eval-display):
	Improve argument/docstring consistency.
	(edebug-test-coverage, edebug-gensym, edebug-read)
	(edebug-top-level-nonstop, edebug-eval-result-list)
	(edebug-eval-redisplay, edebug-trace): Fix typos in docstring.
	(edebug-eval-defun, edebug-eval-top-level-form, edebug)
	(edebug-display-freq-count): Reflow docstrings.
	(edebug-restore-status): Doc fix.

2008-05-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* proced.el (proced-header-line): Use the :align-to 0 feature
	rather than computing the corresponding position manually.
	(proced-update): Don't hardcode point-min==1.

2008-05-24  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-mode.el (c-postprocess-file-styles): Throw an error